Calculate face cycles and plot statistics

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -14,11 +14,12 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook creates a loop inventory from the input data set.\n",
+    "This notebook creates a loop inventory from the input data set and calculates/plots basic descriptive statistics.\n",
     "\n",
-    "Contact: Michael Szell (michael.szell@gmail.com)  \n",
+    "Contact: Michael Szell (michael.szell@gmail.com)\n",
+    "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-01-29  "
+    "Last modified: 2024-02-14  "
    ]
   },
   {
@@ -115,10 +116,13 @@
     "        layout.append(nodes_coords[pos])\n",
     "    return layout\n",
     "\n",
-    "def plotCheck(G, nodes_id, nodes_coords, vertex_size = 6):\n",
+    "def plotCheck(G, nodes_id, nodes_coords, vertex_size = 6, edge_color=None):\n",
     "    fig, ax = plt.subplots()\n",
     "    layout = getLayout(G, nodes_id, nodes_coords)\n",
-    "    ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout);\n",
+    "    if edge_color is None:\n",
+    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout);\n",
+    "    else:\n",
+    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, edge_color=edge_color);\n",
     "    return fig\n",
     "    \n",
     "def getCycleLength(c):\n",
@@ -394,17 +398,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e98ffcf3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for e in G.es:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5ccfbc29",
    "metadata": {},
    "outputs": [],
@@ -418,7 +411,7 @@
    "id": "bc5a1811",
    "metadata": {},
    "source": [
-    "### Get cycle basis"
+    "### Get minimal cycle basis (=face cycles)"
    ]
   },
   {
@@ -430,16 +423,42 @@
    },
    "outputs": [],
    "source": [
-    "# https://python.igraph.org/en/latest/api/igraph.GraphBase.html#fundamental_cycles\n",
-    "fcycles = {}\n",
-    "fcycles_lengths = []\n",
+    "# https://python.igraph.org/en/latest/api/igraph.GraphBase.html#minimum_cycle_basis\n",
+    "cyclebasis = {}\n",
     "cid = 0\n",
-    "for c in G.fundamental_cycles():\n",
+    "for c in G.minimum_cycle_basis():\n",
     "    # Add some statistics\n",
     "    ws = [G.es(eid)['weight'] for eid in c]\n",
-    "    fcycles[cid] = {\"edges\": c, \"length\": sum(reduce(lambda a, b: a + b, ws))}\n",
-    "    fcycles_lengths.append(len(c))\n",
+    "    cyclebasis[cid] = {\"edges\": c, \"length\": sum(reduce(lambda a, b: a + b, ws)), \"numnodes\": len(c)}\n",
     "    cid += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae6e8770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show longest cycle in minimal cycle basis (last has most nodes)\n",
+    "edge_colors = []\n",
+    "for e in G.es:\n",
+    "    if e.index in cyclebasis[max(cyclebasis.keys())][\"edges\"]:\n",
+    "        edge_colors.append(\"red\")\n",
+    "    else:\n",
+    "        edge_colors.append(\"grey\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "630b615e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=6, edge_color=edge_colors)\n",
+    "plt.text(0,0.04, \"Longest face loop highlighted: \" + str(int(cyclebasis[max(cyclebasis.keys())][\"length\"]/1000)) + \"km\");\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -477,7 +496,7 @@
    "id": "a1fee5e7",
    "metadata": {},
    "source": [
-    "### Get all simple cycles via nx"
+    "### Get all cycles via nx"
    ]
   },
   {
@@ -601,6 +620,31 @@
     "\n",
     "plt.text(cycle_numnode_bound/20,0.01, \"Bound: \" + str(cycle_numnode_bound))\n",
     "plt.text(cycle_numnode_bound/20,0.04, \"Cycles: \" + str(numcycles));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0a75c85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(8, 3))\n",
+    "axes1 = fig.add_axes([0.1, 0.1, 0.35, 0.8])\n",
+    "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
+    "\n",
+    "histxy = axes1.hist([c[\"length\"] for c in cyclebasis.values()], density=False)\n",
+    "axes1.set_xlabel('Length [m]')\n",
+    "axes1.set_ylabel('Frequency')\n",
+    "axes1.set_title('Face cycle lengths')\n",
+    "axes1.plot([15000,15000], [0,max(histxy[0])], \":k\")\n",
+    "axes1.plot([30000,30000], [0,max(histxy[0])], \":k\")\n",
+    "massinallowedrange = round(sum(histxy[0][-6:])/sum(histxy[0][:])*100) # Should be 90%\n",
+    "axes1.text(22500, max(histxy[0]), str(massinallowedrange) + \"%\", horizontalalignment='center', verticalalignment='top')\n",
+    "\n",
+    "axes2.hist([c[\"numnodes\"] for c in cyclebasis.values()], density=False, bins=list(range(cycle_numnode_bound+1)))\n",
+    "axes2.set_xlabel('Nodes')\n",
+    "axes2.set_title('Nodes per face cycle');"
    ]
   },
   {
