Check face cycle length limits

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -59,6 +59,7 @@
    "outputs": [],
    "source": [
     "cycle_numnode_bound = 30  # From 30 it starts getting slow\n",
+    "facecycle_limit = [15000,30000]  # 90% of face cycle lengths should conform to these length limits [m]\n",
     "\n",
     "PATH = {\n",
     "    \"data_in\": \"../data/input/faxe/network/\",\n",
@@ -436,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae6e8770",
+   "id": "e2510623",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "630b615e",
+   "id": "0acb0f95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,8 +626,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0a75c85",
-   "metadata": {},
+   "id": "09bac9ba",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(8, 3))\n",
@@ -637,14 +640,47 @@
     "axes1.set_xlabel('Length [m]')\n",
     "axes1.set_ylabel('Frequency')\n",
     "axes1.set_title('Face cycle lengths')\n",
-    "axes1.plot([15000,15000], [0,max(histxy[0])], \":k\")\n",
-    "axes1.plot([30000,30000], [0,max(histxy[0])], \":k\")\n",
+    "axes1.plot([facecycle_limit[0],facecycle_limit[0]], [0,max(histxy[0])], \":k\")\n",
+    "axes1.plot([facecycle_limit[1],facecycle_limit[1]], [0,max(histxy[0])], \":k\")\n",
     "massinallowedrange = round(sum(histxy[0][-6:])/sum(histxy[0][:])*100) # Should be 90%\n",
-    "axes1.text(22500, max(histxy[0]), str(massinallowedrange) + \"%\", horizontalalignment='center', verticalalignment='top')\n",
+    "axes1.text((facecycle_limit[0]+facecycle_limit[1])/2, max(histxy[0]), str(massinallowedrange) + \"%\", horizontalalignment='center', verticalalignment='top')\n",
     "\n",
     "axes2.hist([c[\"numnodes\"] for c in cyclebasis.values()], density=False, bins=list(range(cycle_numnode_bound+1)))\n",
     "axes2.set_xlabel('Nodes')\n",
     "axes2.set_title('Nodes per face cycle');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "565c1bcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show face cycles that conform to the length thresholds\n",
+    "okedges = set()\n",
+    "for c in cyclebasis.values():\n",
+    "    if c[\"length\"] >= facecycle_limit[0] and c[\"length\"] <= facecycle_limit[1]:\n",
+    "        okedges = okedges.union(set(c[\"edges\"]))\n",
+    "\n",
+    "edge_colors = []\n",
+    "for e in G.es:\n",
+    "    if e.index in okedges:\n",
+    "        edge_colors.append(\"green\")\n",
+    "    else:\n",
+    "        edge_colors.append(\"grey\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bc2c99a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=6, edge_color=edge_colors)\n",
+    "plt.text(0,0.04, \"Conforming face loops highlighted\")\n",
+    "plt.tight_layout()"
    ]
   },
   {
