--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# 01. Create loop inventory\n",
+    "# 01. Create loop census\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -14,12 +14,12 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook creates a loop inventory from the input data set and calculates/plots basic descriptive statistics.\n",
+    "This notebook creates a loop census from the input data set and calculates/plots basic descriptive statistics.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-02-14  "
+    "Last modified: 2024-02-16  "
    ]
   },
   {
@@ -35,12 +35,12 @@
    "id": "5faeedc4",
    "metadata": {},
    "source": [
-    "* Double-check cycle/edge lengths. For example 3-cycle east of Faxe\n",
+    "* Double-check loop/link lengths. For example 3-loop east of Faxe\n",
     "* X Incorporate gradients\n",
-    "* X Add cycle permutations for node-based analysis\n",
+    "* X Add loop permutations for node-based analysis\n",
     "* X Drop non-main nodes\n",
     "* X Drop loops (they are really dangling links)\n",
-    "* X Find all simple cycles (bounded?-max length?) with networkX"
+    "* X Find all simple loops (bounded?-max length?) with networkX"
    ]
   },
   {
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_numnode_bound = 30  # From 30 it starts getting slow\n",
-    "facecycle_limit = [15000,30000]  # 90% of face cycle lengths should conform to these length limits [m]\n",
+    "loop_numnode_bound = 30  # From 30 it starts getting slow\n",
+    "faceloop_limit = [15000,30000]  # 90% of face loop lengths should conform to these length limits [m]\n",
     "\n",
     "PATH = {\n",
     "    \"data_in\": \"../data/input/faxe/network/\",\n",
@@ -117,23 +117,23 @@
     "        layout.append(nodes_coords[pos])\n",
     "    return layout\n",
     "\n",
-    "def plotCheck(G, nodes_id, nodes_coords, vertex_size = 6, edge_color=None):\n",
+    "def plotCheck(G, nodes_id, nodes_coords, vertex_size = 7, edge_color=None):\n",
     "    fig, ax = plt.subplots()\n",
     "    layout = getLayout(G, nodes_id, nodes_coords)\n",
     "    if edge_color is None:\n",
-    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout);\n",
+    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, vertex_color=\"green\");\n",
     "    else:\n",
-    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, edge_color=edge_color);\n",
+    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, edge_color=edge_color, vertex_color=\"green\");\n",
     "    return fig\n",
     "    \n",
-    "def getCycleLength(c):\n",
+    "def getLoopLength(c):\n",
     "    l = 0\n",
     "    cl = len(c)\n",
     "    for i in range(cl):\n",
     "        l += Gnx[c[i%cl]][c[(i+1)%cl]][\"weight\"]\n",
     "    return l\n",
     "\n",
-    "def getCycleMaxSlope(c):\n",
+    "def getLoopMaxSlope(c):\n",
     "    ms = 0\n",
     "    cl = len(c)\n",
     "    for i in range(cl):\n",
@@ -259,7 +259,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords)"
+    "plotCheck(G, nodes_id, nodes_coords);"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords)"
+    "plotCheck(G, nodes_id, nodes_coords);"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords)"
+    "plotCheck(G, nodes_id, nodes_coords);"
    ]
   },
   {
@@ -404,7 +404,7 @@
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords)"
+    "plotCheck(G, nodes_id, nodes_coords);"
    ]
   },
   {
@@ -412,7 +412,7 @@
    "id": "bc5a1811",
    "metadata": {},
    "source": [
-    "### Get minimal cycle basis (=face cycles)"
+    "### Get minimal loop basis (=face loops)"
    ]
   },
   {
@@ -425,26 +425,26 @@
    "outputs": [],
    "source": [
     "# https://python.igraph.org/en/latest/api/igraph.GraphBase.html#minimum_cycle_basis\n",
-    "cyclebasis = {}\n",
+    "loopbasis = {}\n",
     "cid = 0\n",
     "for c in G.minimum_cycle_basis():\n",
     "    # Add some statistics\n",
     "    ws = [G.es(eid)['weight'] for eid in c]\n",
-    "    cyclebasis[cid] = {\"edges\": c, \"length\": sum(reduce(lambda a, b: a + b, ws)), \"numnodes\": len(c)}\n",
+    "    loopbasis[cid] = {\"edges\": c, \"length\": sum(reduce(lambda a, b: a + b, ws)), \"numnodes\": len(c)}\n",
     "    cid += 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2510623",
+   "id": "26aeda72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show longest cycle in minimal cycle basis (last has most nodes)\n",
+    "# Show longest loop in minimal loop basis (last has most nodes)\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e.index in cyclebasis[max(cyclebasis.keys())][\"edges\"]:\n",
+    "    if e.index in loopbasis[max(loopbasis.keys())][\"edges\"]:\n",
     "        edge_colors.append(\"red\")\n",
     "    else:\n",
     "        edge_colors.append(\"grey\")"
@@ -453,12 +453,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0acb0f95",
+   "id": "a1f72413",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=6, edge_color=edge_colors)\n",
-    "plt.text(0,0.04, \"Longest face loop highlighted: \" + str(int(cyclebasis[max(cyclebasis.keys())][\"length\"]/1000)) + \"km\");\n",
+    "plt.text(0,0.04, \"Longest face loop highlighted: \" + str(int(loopbasis[max(loopbasis.keys())][\"length\"]/1000)) + \"km\");\n",
     "plt.tight_layout()"
    ]
   },
@@ -467,13 +467,13 @@
    "id": "c8f07b37",
    "metadata": {},
    "source": [
-    "Getting all simple cycles has not yet been implemented in igraph, see:  \n",
+    "Getting all simple loops has not yet been implemented in igraph, see:  \n",
     "* https://github.com/igraph/igraph/issues/379  \n",
     "* https://github.com/igraph/igraph/issues/1398  \n",
     "Some potential progress here, but only for C, not Python:\n",
     "* https://github.com/igraph/igraph/pull/2181\n",
     "\n",
-    "But they can be XORed through the cycle base.  "
+    "But they can be XORed through the loop base.  "
    ]
   },
   {
@@ -481,7 +481,7 @@
    "id": "8b714ef4",
    "metadata": {},
    "source": [
-    "It has been implemented in networkX though: https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.cycles.simple_cycles.html#networkx.algorithms.cycles.simple_cycles"
+    "It has been implemented in networkX though: https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.loops.simple_loops.html#networkx.algorithms.loops.simple_loops"
    ]
   },
   {
@@ -489,7 +489,7 @@
    "id": "cbbca691",
    "metadata": {},
    "source": [
-    "Therefore, we do not use igraph's cycle basis, but go ahead with networkX."
+    "Therefore, we do not use igraph's loop basis, but go ahead with networkX."
    ]
   },
   {
@@ -497,7 +497,7 @@
    "id": "a1fee5e7",
    "metadata": {},
    "source": [
-    "### Get all cycles via nx"
+    "### Get all loops via nx"
    ]
   },
   {
@@ -529,24 +529,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allcycles_unique = {}\n",
+    "allloops_unique = {}\n",
     "nodes_done = set()\n",
-    "numcycles_unique = 0\n",
-    "allcycles_generator = nx.simple_cycles(Gnx, length_bound=cycle_numnode_bound)\n",
-    "for c in allcycles_generator:\n",
+    "numloops_unique = 0\n",
+    "allloops_generator = nx.simple_cycles(Gnx, length_bound=loop_numnode_bound)\n",
+    "for c in allloops_generator:\n",
     "    sourcenode = c[0]\n",
-    "    c_length = getCycleLength(c)\n",
-    "    c_max_slope = getCycleMaxSlope(c)\n",
-    "    numcycles_unique += 1\n",
+    "    c_length = getLoopLength(c)\n",
+    "    c_max_slope = getLoopMaxSlope(c)\n",
+    "    numloops_unique += 1\n",
     "    if sourcenode in nodes_done:\n",
-    "        allcycles_unique[sourcenode][\"cycles\"].append(c)\n",
-    "        allcycles_unique[sourcenode][\"lengths\"].append(c_length)\n",
-    "        allcycles_unique[sourcenode][\"numnodes\"].append(len(c))\n",
-    "        allcycles_unique[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
+    "        allloops_unique[sourcenode][\"loops\"].append(c)\n",
+    "        allloops_unique[sourcenode][\"lengths\"].append(c_length)\n",
+    "        allloops_unique[sourcenode][\"numnodes\"].append(len(c))\n",
+    "        allloops_unique[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
     "    else:\n",
-    "        allcycles_unique[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope]}\n",
+    "        allloops_unique[sourcenode] = {\"loops\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope]}\n",
     "        nodes_done.add(sourcenode)\n",
-    "print(\"Found \" + str(numcycles_unique) + \" unique cycles for length bound \" + str(cycle_numnode_bound))"
+    "print(\"Found \" + str(numloops_unique) + \" unique loops for length bound \" + str(loop_numnode_bound))"
    ]
   },
   {
@@ -556,25 +556,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allcycles = {}\n",
+    "allloops = {}\n",
     "nodes_done = set()\n",
-    "numcycles = 0\n",
-    "allcycles_generator = nx.simple_cycles(Gnx, length_bound=cycle_numnode_bound)\n",
-    "for c in allcycles_generator:\n",
+    "numloops = 0\n",
+    "allloops_generator = nx.simple_cycles(Gnx, length_bound=loop_numnode_bound)\n",
+    "for c in allloops_generator:\n",
     "    sourcenode = c[0]\n",
-    "    c_length = getCycleLength(c)\n",
-    "    c_max_slope = getCycleMaxSlope(c)\n",
+    "    c_length = getLoopLength(c)\n",
+    "    c_max_slope = getLoopMaxSlope(c)\n",
     "    for sourcenode in c:\n",
-    "        numcycles += 1\n",
+    "        numloops += 1\n",
     "        if sourcenode in nodes_done:\n",
-    "            allcycles[sourcenode][\"cycles\"].append(c)\n",
-    "            allcycles[sourcenode][\"lengths\"].append(c_length)\n",
-    "            allcycles[sourcenode][\"numnodes\"].append(len(c))\n",
-    "            allcycles[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
+    "            allloops[sourcenode][\"loops\"].append(c)\n",
+    "            allloops[sourcenode][\"lengths\"].append(c_length)\n",
+    "            allloops[sourcenode][\"numnodes\"].append(len(c))\n",
+    "            allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
     "        else:\n",
-    "            allcycles[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope]}\n",
+    "            allloops[sourcenode] = {\"loops\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope]}\n",
     "            nodes_done.add(sourcenode)\n",
-    "print(\"Found \" + str(numcycles) + \" cycles for length bound \" + str(cycle_numnode_bound))"
+    "print(\"Found \" + str(numloops) + \" loops for length bound \" + str(loop_numnode_bound))"
    ]
   },
   {
@@ -584,16 +584,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allcyclelengths = np.zeros(numcycles)\n",
-    "allcyclenumnodes = np.zeros(numcycles, dtype=int)\n",
-    "allcyclemaxslopes = np.zeros(numcycles)\n",
+    "alllooplengths = np.zeros(numloops)\n",
+    "allloopnumnodes = np.zeros(numloops, dtype=int)\n",
+    "allloopmaxslopes = np.zeros(numloops)\n",
     "i = 0\n",
-    "for j in allcycles:\n",
-    "    l = len(allcycles[j][\"lengths\"])\n",
-    "    allcyclelengths[i:i+l] = allcycles[j][\"lengths\"]\n",
-    "    allcyclenumnodes[i:i+l] = allcycles[j][\"numnodes\"]\n",
-    "    allcyclemaxslopes[i:i+l] = allcycles[j][\"max_slopes\"]\n",
+    "for j in allloops:\n",
+    "    l = len(allloops[j][\"lengths\"])\n",
+    "    alllooplengths[i:i+l] = allloops[j][\"lengths\"]\n",
+    "    allloopnumnodes[i:i+l] = allloops[j][\"numnodes\"]\n",
+    "    allloopmaxslopes[i:i+l] = allloops[j][\"max_slopes\"]\n",
     "    i += l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26228430",
+   "metadata": {},
+   "source": [
+    "## Descriptive network statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "317f7cd3",
+   "metadata": {},
+   "source": [
+    "### Link lengths"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac5fd620",
+   "metadata": {},
+   "source": [
+    "### Loop lengths"
    ]
   },
   {
@@ -609,24 +633,24 @@
     "axes1 = fig.add_axes([0.1, 0.1, 0.35, 0.8])\n",
     "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
     "\n",
-    "axes1.hist(allcyclelengths, density=True)\n",
+    "axes1.hist(alllooplengths, density=True)\n",
     "axes1.set_xlabel('Length [m]')\n",
     "axes1.set_ylabel('Probability')\n",
-    "axes1.set_title('Cycle lengths')\n",
+    "axes1.set_title('Loop lengths')\n",
     "\n",
-    "axes2.hist(allcyclenumnodes, density=True, bins=list(range(cycle_numnode_bound+1)))\n",
+    "axes2.hist(allloopnumnodes, density=True, bins=list(range(loop_numnode_bound+1)))\n",
     "axes2.set_xlabel('Nodes')\n",
-    "axes2.set_title('Nodes per cycle')\n",
-    "axes2.set_xlim([0, cycle_numnode_bound+0.5])\n",
+    "axes2.set_title('Nodes per loop')\n",
+    "axes2.set_xlim([0, loop_numnode_bound+0.5])\n",
     "\n",
-    "plt.text(cycle_numnode_bound/20,0.01, \"Bound: \" + str(cycle_numnode_bound))\n",
-    "plt.text(cycle_numnode_bound/20,0.04, \"Cycles: \" + str(numcycles));"
+    "plt.text(loop_numnode_bound/20,0.01, \"Bound: \" + str(loop_numnode_bound))\n",
+    "plt.text(loop_numnode_bound/20,0.04, \"Loops: \" + str(numloops));"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09bac9ba",
+   "id": "8d6af5d6",
    "metadata": {
     "scrolled": true
    },
@@ -636,31 +660,31 @@
     "axes1 = fig.add_axes([0.1, 0.1, 0.35, 0.8])\n",
     "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
     "\n",
-    "histxy = axes1.hist([c[\"length\"] for c in cyclebasis.values()], density=False)\n",
+    "histxy = axes1.hist([c[\"length\"] for c in loopbasis.values()], density=False)\n",
     "axes1.set_xlabel('Length [m]')\n",
     "axes1.set_ylabel('Frequency')\n",
-    "axes1.set_title('Face cycle lengths')\n",
-    "axes1.plot([facecycle_limit[0],facecycle_limit[0]], [0,max(histxy[0])], \":k\")\n",
-    "axes1.plot([facecycle_limit[1],facecycle_limit[1]], [0,max(histxy[0])], \":k\")\n",
+    "axes1.set_title('Face loop lengths')\n",
+    "axes1.plot([faceloop_limit[0],faceloop_limit[0]], [0,max(histxy[0])], \":k\")\n",
+    "axes1.plot([faceloop_limit[1],faceloop_limit[1]], [0,max(histxy[0])], \":k\")\n",
     "massinallowedrange = round(sum(histxy[0][-6:])/sum(histxy[0][:])*100) # Should be 90%\n",
-    "axes1.text((facecycle_limit[0]+facecycle_limit[1])/2, max(histxy[0]), str(massinallowedrange) + \"%\", horizontalalignment='center', verticalalignment='top')\n",
+    "axes1.text((faceloop_limit[0]+faceloop_limit[1])/2, max(histxy[0]), str(massinallowedrange) + \"%\", horizontalalignment='center', verticalalignment='top')\n",
     "\n",
-    "axes2.hist([c[\"numnodes\"] for c in cyclebasis.values()], density=False, bins=list(range(cycle_numnode_bound+1)))\n",
+    "axes2.hist([c[\"numnodes\"] for c in loopbasis.values()], density=False, bins=list(range(loop_numnode_bound+1)))\n",
     "axes2.set_xlabel('Nodes')\n",
-    "axes2.set_title('Nodes per face cycle');"
+    "axes2.set_title('Nodes per face loop');"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "565c1bcf",
+   "id": "13df0411",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show face cycles that conform to the length thresholds\n",
+    "# Show face loops that conform to the length thresholds\n",
     "okedges = set()\n",
-    "for c in cyclebasis.values():\n",
-    "    if c[\"length\"] >= facecycle_limit[0] and c[\"length\"] <= facecycle_limit[1]:\n",
+    "for c in loopbasis.values():\n",
+    "    if c[\"length\"] >= faceloop_limit[0] and c[\"length\"] <= faceloop_limit[1]:\n",
     "        okedges = okedges.union(set(c[\"edges\"]))\n",
     "\n",
     "edge_colors = []\n",
@@ -674,11 +698,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bc2c99a",
-   "metadata": {},
+   "id": "36b875c8",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=6, edge_color=edge_colors)\n",
+    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_color=edge_colors)\n",
     "plt.text(0,0.04, \"Conforming face loops highlighted\")\n",
     "plt.tight_layout()"
    ]
@@ -688,7 +714,7 @@
    "id": "0bd274d8",
    "metadata": {},
    "source": [
-    "## Save cycle inventory"
+    "## Save loop census"
    ]
   },
   {
@@ -698,16 +724,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH['data_out'] + 'cycleinventory_'+str(cycle_numnode_bound)+'.pkl', 'wb') as f:\n",
-    "    pickle.dump(allcycles, f)\n",
-    "    pickle.dump(allcyclelengths, f)\n",
-    "    pickle.dump(allcyclenumnodes, f)\n",
-    "    pickle.dump(allcyclemaxslopes, f)\n",
+    "with open(PATH['data_out'] + 'loopcensus_'+str(loop_numnode_bound)+'.pkl', 'wb') as f:\n",
+    "    pickle.dump(allloops, f)\n",
+    "    pickle.dump(alllooplengths, f)\n",
+    "    pickle.dump(allloopnumnodes, f)\n",
+    "    pickle.dump(allloopmaxslopes, f)\n",
     "    pickle.dump(G, f)\n",
-    "    pickle.dump(cycle_numnode_bound, f)\n",
+    "    pickle.dump(loop_numnode_bound, f)\n",
     "    pickle.dump(nodes_id, f)\n",
     "    pickle.dump(nodes_coords, f)\n",
-    "    pickle.dump(numcycles, f)"
+    "    pickle.dump(numloops, f)\n",
+    "    pickle.dump(loopbasis, f)"
    ]
   }
  ],
