--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# 02. Explore loop inventory\n",
+    "# 02. Explore loop census\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -14,11 +14,12 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook explores the loop inventory created in notebook 01.\n",
+    "This notebook explores the loop census created in notebook 01, beyond descriptive network statistics.\n",
     "\n",
-    "Contact: Michael Szell (michael.szell@gmail.com)  \n",
+    "Contact: Michael Szell (michael.szell@gmail.com)\n",
+    "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-01-29  "
+    "Last modified: 2024-02-16  "
    ]
   },
   {
@@ -50,11 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_numnode_bound = 30\n",
-    "scenario = \"scenario1\"\n",
+    "loop_numnode_bound = 30\n",
+    "scenario = \"scenario2\"\n",
     "\n",
-    "restrictions = {\"scenario1\": {\"cyclelengthmin\": 3000, \"cyclelengthmax\": 15000, \"maxslope\": 5}, # family with small children\n",
-    "                \"scenario2\": {\"cyclelengthmin\": 10000, \"cyclelengthmax\": 40000, \"maxslope\": 7} # teenage/adult leisure cyclist\n",
+    "restrictions = {\"scenario1\": {\"looplengthmin\": 5000, \"looplengthmax\": 20000, \"maxslope\": 4}, # family with small children\n",
+    "                \"scenario2\": {\"looplengthmin\": 10000, \"looplengthmax\": 40000, \"maxslope\": 6} # teenage/adult leisure cyclist\n",
     "                }\n",
     "\n",
     "PATH = {\n",
@@ -115,16 +116,16 @@
     "        layout.append(nodes_coords[pos])\n",
     "    return layout\n",
     "\n",
-    "def plotCheck(G, nodes_id, nodes_coords, vertex_size = 6, edge_color=None):\n",
+    "def plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_color=None):\n",
     "    fig, ax = plt.subplots()\n",
     "    layout = getLayout(G, nodes_id, nodes_coords)\n",
     "    if edge_color is None:\n",
-    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout);\n",
+    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, vertex_color=\"green\");\n",
     "    else:\n",
-    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, edge_color=edge_color);\n",
+    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, edge_color=edge_color, vertex_color=\"green\");\n",
     "    return fig\n",
     "    \n",
-    "def getCycleLength(c):\n",
+    "def getLoopLength(c):\n",
     "    l = 0\n",
     "    cl = len(c)\n",
     "    for i in range(cl):\n",
@@ -155,22 +156,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH['data_out'] + 'cycleinventory_'+str(cycle_numnode_bound)+'.pkl', 'rb') as f:\n",
-    "    allcycles = pickle.load(f)\n",
-    "    allcyclelengths = pickle.load(f)\n",
-    "    allcyclenumnodes = pickle.load(f)\n",
-    "    allcyclemaxslopes = pickle.load(f)\n",
+    "with open(PATH['data_out'] + 'loopcensus_'+str(loop_numnode_bound)+'.pkl', 'rb') as f:\n",
+    "    allloops = pickle.load(f)\n",
+    "    alllooplengths = pickle.load(f)\n",
+    "    allloopnumnodes = pickle.load(f)\n",
+    "    allloopmaxslopes = pickle.load(f)\n",
     "    G = pickle.load(f)\n",
-    "    cycle_numnode_bound = pickle.load(f)\n",
+    "    loop_numnode_bound = pickle.load(f)\n",
     "    nodes_id = pickle.load(f)\n",
     "    nodes_coords = pickle.load(f)\n",
-    "    numcycles = pickle.load(f)"
+    "    numloops = pickle.load(f)\n",
+    "    loopbasis = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bac1ed4",
+   "id": "f13c5935",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cf2b625",
+   "id": "c05b5773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,23 +191,23 @@
     "axes1 = fig.add_axes([0.1, 0.1, 0.35, 0.8])\n",
     "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
     "\n",
-    "axes1.hist(allcyclelengths, density=True)\n",
+    "axes1.hist(alllooplengths, density=True)\n",
     "axes1.set_xlabel('Length [m]')\n",
     "axes1.set_ylabel('Probability')\n",
-    "axes1.set_title('Cycle lengths')\n",
+    "axes1.set_title('Loop lengths')\n",
     "\n",
-    "axes2.hist(allcyclenumnodes, density=True, bins=list(range(cycle_numnode_bound+1)))\n",
+    "axes2.hist(allloopnumnodes, density=True, bins=list(range(loop_numnode_bound+1)))\n",
     "axes2.set_xlabel('Nodes')\n",
-    "axes2.set_title('Nodes per cycle')\n",
-    "axes2.set_xlim([0, cycle_numnode_bound+0.5])\n",
+    "axes2.set_title('Nodes per loop')\n",
+    "axes2.set_xlim([0, loop_numnode_bound+0.5])\n",
     "\n",
-    "plt.text(cycle_numnode_bound/20,0.01, \"Bound: \" + str(cycle_numnode_bound))\n",
-    "plt.text(cycle_numnode_bound/20,0.04, \"Cycles: \" + str(numcycles));"
+    "plt.text(loop_numnode_bound/20,0.01, \"Bound: \" + str(loop_numnode_bound))\n",
+    "plt.text(loop_numnode_bound/20,0.04, \"Loops: \" + str(numloops));"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6952a4f3",
+   "id": "fedbbbd0",
    "metadata": {},
    "source": [
     "## Restrict to length bounds"
@@ -213,65 +215,65 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b1107e2",
+   "id": "b62c74c8",
    "metadata": {},
    "source": [
-    "Go through all nodes and restrict their cycles to the scenario's length restrictions"
+    "Go through all nodes and restrict their loops to the scenario's length restrictions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b966ce4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "allcycles_bound = {}\n",
-    "for sourcenode in allcycles:\n",
-    "    this_lengths = np.array(allcycles[sourcenode]['lengths'])\n",
-    "    mask_this = (this_lengths >= restrictions[scenario][\"cyclelengthmin\"]) & (this_lengths <= restrictions[scenario][\"cyclelengthmax\"])\n",
-    "    allcycles_bound[sourcenode] = {\"cycles\": list(compress(allcycles[sourcenode]['cycles'], mask_this)),\n",
-    "                                   \"lengths\": list(compress(allcycles[sourcenode]['lengths'], mask_this)),\n",
-    "                                   \"numnodes\": list(compress(allcycles[sourcenode]['numnodes'], mask_this))}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ca4cbc8",
+   "id": "73934a5a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes=[len(allcycles_bound[k]['cycles']) for k in range(len(allcycles_bound.keys()))]\n",
-    "numcycles_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i/(numcycles_max/20) for i in vertex_sizes]"
+    "allloops_bound = {}\n",
+    "for sourcenode in allloops:\n",
+    "    this_lengths = np.array(allloops[sourcenode]['lengths'])\n",
+    "    mask_this = (this_lengths >= restrictions[scenario][\"looplengthmin\"]) & (this_lengths <= restrictions[scenario][\"looplengthmax\"])\n",
+    "    allloops_bound[sourcenode] = {\"loops\": list(compress(allloops[sourcenode]['loops'], mask_this)),\n",
+    "                                   \"lengths\": list(compress(allloops[sourcenode]['lengths'], mask_this)),\n",
+    "                                   \"numnodes\": list(compress(allloops[sourcenode]['numnodes'], mask_this))}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2353b32",
+   "id": "615ec811",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertex_sizes=[len(allloops_bound[k]['loops']) for k in range(len(allloops_bound.keys()))]\n",
+    "numloops_max = max(vertex_sizes)\n",
+    "vertex_sizes = [i/(numloops_max/20) for i in vertex_sizes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3d8340b",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size = vertex_sizes)\n",
-    "plt.text(0,0.04, \"Max # of loops: \" + str(numcycles_max));\n",
+    "plt.text(0,0.04, \"Max # of loops: \" + str(numloops_max));\n",
     "plt.tight_layout()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a640b3",
+   "id": "7e94a4a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(PATH[\"plot\"] + \"network_numcycles_\"+str(restrictions[scenario][\"cyclelengthmin\"])+\"to\"+str(restrictions[scenario][\"cyclelengthmax\"]))"
+    "fig.savefig(PATH[\"plot\"] + \"network_numloops_\"+str(restrictions[scenario][\"looplengthmin\"])+\"to\"+str(restrictions[scenario][\"looplengthmax\"]))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a67d8ec9",
+   "id": "ab5423e1",
    "metadata": {},
    "source": [
     "## Restrict to acceptable gradients"
@@ -280,38 +282,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad4dc360",
+   "id": "906c9b7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "allcycles_bound = {}\n",
-    "for sourcenode in allcycles:\n",
-    "    this_lengths = np.array(allcycles[sourcenode]['lengths'])\n",
-    "    this_maxslopes = np.array(allcycles[sourcenode]['max_slopes'])\n",
-    "    mask_this = (this_lengths >= restrictions[scenario][\"cyclelengthmin\"])\n",
-    "    mask_this &= (this_lengths <= restrictions[scenario][\"cyclelengthmax\"]) \n",
+    "allloops_bound = {}\n",
+    "for sourcenode in allloops:\n",
+    "    this_lengths = np.array(allloops[sourcenode]['lengths'])\n",
+    "    this_maxslopes = np.array(allloops[sourcenode]['max_slopes'])\n",
+    "    mask_this = (this_lengths >= restrictions[scenario][\"looplengthmin\"])\n",
+    "    mask_this &= (this_lengths <= restrictions[scenario][\"looplengthmax\"]) \n",
     "    mask_this &= (this_maxslopes <= restrictions[scenario][\"maxslope\"])\n",
-    "    allcycles_bound[sourcenode] = {\"cycles\": list(compress(allcycles[sourcenode]['cycles'], mask_this)),\n",
-    "                                   \"lengths\": list(compress(allcycles[sourcenode]['lengths'], mask_this)),\n",
-    "                                   \"numnodes\": list(compress(allcycles[sourcenode]['numnodes'], mask_this))}"
+    "    allloops_bound[sourcenode] = {\"loops\": list(compress(allloops[sourcenode]['loops'], mask_this)),\n",
+    "                                   \"lengths\": list(compress(allloops[sourcenode]['lengths'], mask_this)),\n",
+    "                                   \"numnodes\": list(compress(allloops[sourcenode]['numnodes'], mask_this))}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d18fe09d",
+   "id": "c97e46a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes=[len(allcycles_bound[k]['cycles']) for k in range(len(allcycles_bound.keys()))]\n",
-    "numcycles_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i/(numcycles_max/20) for i in vertex_sizes]"
+    "vertex_sizes=[len(allloops_bound[k]['loops']) for k in range(len(allloops_bound.keys()))]\n",
+    "numloops_max = max(vertex_sizes)\n",
+    "vertex_sizes = [i/(numloops_max/20) for i in vertex_sizes]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efa53524",
+   "id": "66459687",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,23 +328,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef628c0f",
+   "id": "b053a388",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors)\n",
-    "plt.text(0,0.04, \"Max # of loops: \" + str(numcycles_max));\n",
+    "plt.text(0,0.04, \"Max # of loops: \" + str(numloops_max));\n",
     "plt.tight_layout()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26d07f26",
+   "id": "5f333bcb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(PATH[\"plot\"] + \"network_numcycles_\"+str(restrictions[scenario][\"cyclelengthmin\"])+\"to\"+str(restrictions[scenario][\"cyclelengthmax\"])+\"_maxslope\"+str(restrictions[scenario][\"maxslope\"]))"
+    "fig.savefig(PATH[\"plot\"] + \"network_numloops_\"+str(restrictions[scenario][\"looplengthmin\"])+\"to\"+str(restrictions[scenario][\"looplengthmax\"])+\"_maxslope\"+str(restrictions[scenario][\"maxslope\"]))"
    ]
   }
  ],
